tests/baselines/reference/contextualClassMethodParameter7.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter7.ts(6,12): error TS2322: Type '"c"' is not assignable to type '"a" | "b"'.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter7.ts (1 errors) ====
    class Base {
        method(x: "a" | "b") { }
    }
    
    class Derived extends Base {
        method(x = "c") { }
               ~~~~~~~
!!! error TS2322: Type '"c"' is not assignable to type '"a" | "b"'.
    }
    